# OpenHouse-backend

./: AGENT_WORKFLOW.md  BACKEND_CLEANUP_PLAN.md  BACKEND_TICK_RATE_CHANGE.md  CLAUDE.md  CRASH_BACKEND_V2_PLAN.md  CRASH_SIMULATION_TESTS_PLAN.md  Cargo.toml  DAOPAD_DEPLOYMENT_ANALYSIS.md  DAOPAD_DEPLOYMENT_EXECUTIVE_SUMMARY.txt  DICE_ANIMATION_FIX.md  DICE_AUTH_DEPOSIT_UX_PLAN.md  DICE_DYNAMIC_MAX_BET_PLAN.md  DICE_ENHANCED_HISTORY_PLAN.md  DICE_GAME_IMPLEMENTATION_PLAN.md  DICE_INTERNAL_ACCOUNTING_PLAN.md  DICE_LIQUIDITY_INTEGRATION_PLAN.md  DICE_LIQUIDITY_SECURITY_ANALYSIS.md  DICE_PERF_FIX_PLAN.md  HOUSE_EDGE_1PCT_PLAN.md  INSTANT_DICE_RANDOMNESS_PLAN.md  LIFE_REFACTORING_PLAN.md  LIQUIDITY_POOL_PLAN.md  LIQUIDITY_POOL_PLAN_V2.md  LIQUIDITY_POOL_PLAN_V3.md  LIQUIDITY_POOL_PLAN_V3_FINAL.md  MINES_ICP_BETTING_PLAN.md  OPTIMISTIC_LOCAL_SIM_PLAN.md  OPTIMISTIC_SIM_EXTRACTION.md  OPTIMISTIC_SIM_JOURNEY.md  OPTION_E_IMPLEMENTATION_PLAN.md  PLAN_ADMIN_SOLVENCY_DASHBOARD.md  PLAN_ADMIN_SOLVENCY_UI.md  PLAN_BETTING_RAIL_IMPROVEMENTS.md  PLAN_BETTING_RAIL_REDESIGN.md  PLAN_BLACKJACK.md  PLAN_CRIT2_SLIPPAGE_PROTECTION.md  PLAN_DICE_CHIP_BETTING.md  PLAN_DICE_LIQUIDITY_UI_IMPROVEMENTS.md  PLAN_DICE_LP_UI_REFACTOR.md  PLAN_DICE_PAYOUT_FIX.md  (+73 more)
dice_backend/: Cargo.toml  README.md  accounting_logic.md  dice_backend.did
dice_backend/src/: accounting.rs  analytics.rs  game.rs  heartbeat_impl.rs  lib.rs  seed.rs  types.rs
dice_backend/tests/: test_game_logic.rs
life1_backend/: CHECKPOINT_IMPLEMENTATION_PLAN.md  Cargo.toml  ELIMINATION_MODAL_PLAN.md  FRONTEND_512_PLAN.md  IDLE_TIMER_PLAN.md  OLD_RULES.md  OPTIMISTIC_SIM_REDESIGN.md  OPTIMIZATION_PLAN.md  QUERY_COMPUTE_MIGRATION_PLAN.md  benchmarks.rs  lib.rs  life1_backend.did  tests.rs
life1_backend/src/: lib.rs  tests.rs
plinko_backend/: AUDIT_REPORT.md  Cargo.toml  README.md  plinko_backend.did
plinko_backend/src/: game.rs  lib.rs
roulette_backend/: Cargo.toml  roulette_backend.did
roulette_backend/src/: game.rs  lib.rs  seed.rs  types.rs
scripts/: tree.md  (+4 more)
(+375 files in other folders)
