[package]
name = "life1_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.19"
# ic-cdk-timers removed - using event-driven architecture instead of timer-based simulation
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
