[package]
name = "roulette_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.19"
ic-cdk-timers = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
ic-stable-structures = "0.7"
num-bigint = "0.4"
num-traits = "0.2"

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
proptest = "1.4"
